FIX: Layout fixes and ScrollBar style

--- a/src/main.scss
+++ b/src/main.scss
@@ -538,3 +538,18 @@ img.emoji {
     opacity: 0;
     transform: translate(-100%, 0);
 }
+
+// Scrollbar
+::-webkit-scrollbar {
+    width: 12px;
+}
+::-webkit-scrollbar-track {
+    background-color: #eaeaea;
+    border-left: 1px solid #ccc;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #aaa;
+}
